fixed the gap in between the cards

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,3 +1,6 @@
+.card {
+  margin-top: -20px;
+}
 .card__image {
   height: 413px;
   width: 100%;
@@ -23,7 +26,7 @@
   padding: 0;
   top: 40px;
   right: 5px;
-
+  cursor: pointer;
   position: relative;
   justify-content: center;
 
