--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,5 +1,4 @@
 .cards {
-  padding: 20px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
   padding-bottom: 40px;
 }
@@ -9,7 +8,7 @@
   margin: 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  gap: 40px 20px;
+  gap: 10px 20px;
   justify-content: center;
 }
 @media screen and (max-width: 627px) {
